# Linear_algebra_remind

./: Makefile  Matrix_iterative_method_visualization.ipynb  README.md  python_Iterative_Matrix_solver.py  python_Matrix_solver.py  requirements.txt  test_numpy.py  utils.py
.github/workflows/: makefile.yml
C++_sector/: CMakeLists.txt
C++_sector/include/: CSRMatrix.h  common_include.h  mat_utils.h
C++_sector/lib/: mat_utils.cpp
